--- a/playbooks/roles/helios/tasks/common.yml
+++ b/playbooks/roles/helios/tasks/common.yml
@@ -2,18 +2,27 @@
 # --------------------------------------------
 #   Common tasks for Helios master and agent
 # --------------------------------------------
-- include: check-vars.yml
-  when: helios_master is defined
-
 - include: "{{ common.utils.fake }}"
-  vars:
-    # We have Java 8 JRE installed already
+  vars:      # Java 8 JRE is already installed
     package: java7-runtime
+
+- include: "{{ common.utils.include }}"
+  vars:
+    roles: [ zookeeper, etcd ]
 
 - name: Calculating Helios version
   set_fact:
     helios_version:     "{{ helios.version     | calculate( helios.latest ) }}"
     helios_master_port: "{{ helios_master_port | default( helios.master.port ) }}"
+    zookeeper_port:     "{{ zookeeper_port     | default( zookeeper.port ) }}"
+    etcd_port:          "{{ etcd_port          | default( etcd.port ) }}"
+- set_fact:
+    helios_command:     "helios -z 'http://{{ helios_master }}:{{ helios_master_port }}'"
+
+- debug: msg="ansible_hostname = '{{ ansible_hostname }}'"
+- debug: msg="helios_master = '{{ helios_master }}'"
+- debug: msg="domain = '{{ domain }}'"
+- debug: msg="helios_command = '{{ helios_command }}'"
 
 - include: "{{ common.utils.download }}"
   vars:
