--- a/playbooks/roles/run-after/tasks/main.yml
+++ b/playbooks/roles/run-after/tasks/main.yml
@@ -1,5 +1,7 @@
 ---
-- include_vars: roles/run-before/vars/main.yml
+- include: "{{ common.utils.include }}"
+  vars:
+    role: run-before
 
 - file:
     path:  "{{ periodic_touch_file }}"
