Consule role is added to Helios role

--- a/playbooks/helios-master-ubuntu.yml
+++ b/playbooks/helios-master-ubuntu.yml
@@ -12,5 +12,6 @@
 
   roles:
     - { role: run-before, period: daily }
+    - { role: consul,     consul_role: server }
     - { role: helios,     helios_role: master }
     - run-after
