--- a/playbooks/helios-agent-ubuntu.yml
+++ b/playbooks/helios-agent-ubuntu.yml
@@ -14,5 +14,6 @@
     - { role: run-before, period: daily }
     # nginx image should be identical to that in roles/helios/vars/main.yml => helios.docker.nginx.image
     - { role: docker, when: periodic, pull: [ 'evgenyg/echo:latest', 'nginx:1.7.9' ]}
-    - { role: helios, helios_role: agent }
+    - { role: consul, consul_role: client }
+    - { role: helios, helios_role: agent  }
     - run-after
