--- a/playbooks/roles/nexus/templates/nexus.properties
+++ b/playbooks/roles/nexus/templates/nexus.properties
@@ -17,7 +17,7 @@
 
 # Jetty section
 application-port={{ nexus_port }}
-application-host=0.0.0.0
+application-host={{ common.net.any_ip }}
 nexus-webapp=${bundleBasedir}/nexus
 nexus-webapp-context-path=/nexus
 
