--- a/playbooks/roles/helios/tasks/verify-master.yml
+++ b/playbooks/roles/helios/tasks/verify-master.yml
@@ -20,6 +20,7 @@
           expect: '^{{ helios.srv_prefix }}\.{{ domain }}\.\s+\d+\s+IN\s+SRV\s+\d+\s+\d+\s+{{ helios_master_port }}\s+.+\.{{ domain }}\.$' }
       - { run:    "host -t SRV '{{ helios.srv_prefix }}.{{ domain }}' '{{ master }}'",
           expect: '^{{ helios.srv_prefix }}.{{ domain }} has SRV record \d+ \d+ {{ helios_master_port }} .+\.{{ domain }}.$' }
+  when: not ( use_consul|bool )
 
 - include: "{{ common.utils.verify }}"
   vars:
@@ -31,12 +32,24 @@
 
 - include: "{{ common.utils.verify }}"
   vars:
-    title: Helios master etcd
+    title: Helios master Etcd
     host:  "{{ master }}"
     port:  "{{ etcd_port }}"
     verify:
       - { path: /version,         content: '"releaseVersion":' }
       - { path: /v2/stats/leader, content: '{"leader":"' }
+  when: not ( use_consul|bool )
+
+- include: "{{ common.utils.verify }}"
+  vars:
+    title: Helios master Consul
+    host:  "{{ master }}"
+    ports:
+      - "{{ consul.ports.http }}"
+      - "{{ consul.ports.gossip }}"
+    verify:
+      - { path: /, content: Consul Agent }
+  when: use_consul|bool
 
 - include: "{{ common.utils.run }}"
   vars:
@@ -51,6 +64,6 @@
 
 - include: "{{ common.utils.register }}"
   vars:
-    etcd_host: "{{ master }}"
-    src:       "{{ register_host }}"
-    dest:      "{{ my_ip }}"
+    host: "{{ master }}"
+    src:  "{{ register_host }}"
+    dest: "{{ my_ip }}"
