--- a/playbooks/roles/helios/vars/main.yml
+++ b/playbooks/roles/helios/vars/main.yml
@@ -26,9 +26,16 @@ helios: {
     config_endpoints: ~/.helios/config,
     state_dir:        /var/lib/helios-agent,
     registrar_plugin: {
-      version: 0.1, # https://github.com/spotify/helios-skydns/releases
-      url:     '{{ common.urls.github }}/spotify/helios-skydns/releases/download/<version>/helios-skydns-<version>.jar',
-      archive: /opt/helios-skydns-<version>.jar
+      skydns: {
+        version: 0.1, # https://github.com/spotify/helios-skydns/releases
+        url:     '{{ common.urls.github }}/spotify/helios-skydns/releases/download/<version>/helios-skydns-<version>.jar',
+        archive: /opt/helios-skydns-<version>.jar
+      },
+      consul: {
+        version: 0.24, # https://github.com/SVT/helios-consul/releases
+        url:     '{{ common.urls.github }}/SVT/helios-consul/releases/download/<version>/helios-consul-<version>.jar',
+        archive: /opt/helios-consul-<version>.jar
+      },
     },
     script: /usr/bin/helios-agent,
     docker: {
