Roles dependencies update

--- a/playbooks/helios-cli-ubuntu.yml
+++ b/playbooks/helios-cli-ubuntu.yml
@@ -12,5 +12,5 @@
 
   roles:
     - { role: run-before, period: daily }
-    - { role: helios, helios_role: cli  }
+    - { role: helios, helios_role: cli, use_consul: false  }
     - run-after
