--- a/playbooks/helios-ubuntu.yml
+++ b/playbooks/helios-ubuntu.yml
@@ -14,5 +14,6 @@
     - { role: run-before, period: daily }
     # nginx image should be identical to that in roles/helios/vars/main.yml => helios.docker.nginx.image
     - { role: docker, when: periodic, pull: [ 'evgenyg/echo:latest', 'nginx:1.7.9' ]}
-    - helios
+    - { role: helios, helios_role: master, use_consul: true }
+    - { role: helios, helios_role: agent,  use_consul: true }
     - run-after
