--- a/playbooks/roles/test-repo/tasks/main.yml
+++ b/playbooks/roles/test-repo/tasks/main.yml
@@ -77,4 +77,4 @@
 - include: "{{ common.roles.gatling }}"
   vars:
     # Sending a list of simulation names: ArtifactoryWarmup, ArtifactoryGet50, etc
-    simulations: "{{ test_repo.simulations | map( attribute = 'name' ) | transform( 'lambda simulation: repo_name + simulation' ) }}"
+    simulations: "{{ test_repo.simulations | map( attribute = 'name' ) | transform( 'lambda simulation: \"{{ repo_name }}\" + simulation' ) }}"
